Divide next and past event APIs, add next event API
